# cognitive-os

./: .gitignore  AGENTS.md  CLONE.md  LICENSE.AGPL-3.0  README.es.md  README.ko.md  README.md  README.zh.md  llms.txt  pyproject.toml  release-please-config.json  strict_demo.cast
.claude-plugin/: README.md  marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: README.md
core/: runtime_manifest.json
docs/: ADAPTER_PORTABILITY.md  AGENT_OS_ARCHITECTURE.md  ANTHROPIC_MANAGED_AGENTS_BRIDGE.md  ARCHITECTURE.md  COGNITIVE_OS_ARCHITECTURE.md  COGNITIVE_SYSTEM_PLAYBOOK.md  CONTRIBUTING.md  DECISION_STORY.md  DEMOS.md  DESIGN_V0_11_PHASE_12.md  DESIGN_V1_0_SEMANTIC_GOVERNANCE.md  DESIGN_V1_1_REASONING_ENGINE.md  EVOLUTION_CONTRACT.md  MEMORY_CONTRACT.md  NARRATIVE.md  NEXT_STEPS.md  OPEN_SOURCE_YOUR_PROFILE.md  PLAN.md  POSTURE.md  POST_SOAK_MIGRATION_PLAN.md  POST_SOAK_TRIAGE.md  PRD_EPISTEMIC_SYNTHESIS.md  PRD_WORKSTYLE_PROFILER.md  PREPARED_PATCHES.md  PROGRESS.md  README.md  ROADMAP_POST_V1.md  SUBSTRATE_BRIDGE.md
kernel/: CHANGELOG.md  CONSTITUTION.md  CONTINUITY_PLAN.md  DESIGN_BEHAVIOR_INVARIANTS.md  FAILURE_MODES.md  FALSIFIABILITY_CONDITIONS.md  HOOKS_MAP.md  KERNEL_LIMITS.md  MANIFEST.sha256  MEMORY_ARCHITECTURE.md  MODEL_PROGRESS_RISK_MODEL.md  OPERATOR_PROFILE_SCHEMA.md  README.md  REASONING_SURFACE.md  REFERENCES.md
scripts/: README.md  demo_posture.sh  demo_strict_mode.sh  demo_symbiosis.sh  png_to_svg_pixels.py  restore-private-symlinks.sh
tests/: test_arm_a_auto_instrumentation.py  test_chain_and_framework.py  test_context_guard.py  test_evolve_friction.py  test_fence_reconstruction_end_to_end.py  test_guidance.py  test_last_elicited.py  test_layer2_classifier_hot_path.py  (+12 more)
(+171 files in other folders)
